# odrpack-python

./: .gitmodules  CITATION.cff  README.md  meson.build  mkdocs.yml  pyproject.toml  requirements-build.txt  rtptest.txt
.github/workflows/: build-deploy-pages.yml  build-deploy-pages.yml_  build-wheels.yml  build_wheels.yml  test-linux.yml  test.yml
cibw-scripts/: before_all_linux.sh  before_all_windows.sh  before_build_linux.sh  before_build_macos.sh  before_build_windows.sh  cibw_before_build_linux.sh  cibw_before_build_windows.sh  cibw_repair_wheel_command_windows.sh  repair_wheel_command_windows.sh
ciwb-scripts/: cibw_before_build_macos.sh
docs/examples/: explicit-model.ipynb  explicit.ipynb  implicit-model.ipynb  implicit.ipynb
scripts/: stuff.ipynb
src/odrpack/: __init__.py  __odrpack.py.cpp  __odrpack.py.nb.cpp  __odrpack.pyi  driver.py  odr.py  odr_fortran.py  odr_scipy.py  result.py
subprojects/: odrpack95.wrap
tests/: example2.py  example5.py  example_readme.py  test_bindings.py  test_multiprocessing.py  test_odr_fit.py  test_odr_single.py  test_odrpack.py  test_odrpack_single.py
